# hackattic-solutions

./: LICENSE
brute-force-zip/: Cargo.toml  README.md
brute-force-zip/src/: main.rs
help-me-unpack/: Cargo.toml  README.md
help-me-unpack/src/: main.rs
mini-miner/: Cargo.toml  README.md
mini-miner/src/: main.rs
password-hashing/: Cargo.toml  README.md
password-hashing/src/: main.rs
tales-of-ssl/: .env.example  .gitignore  Cargo.toml  README.md  build.rs
tales-of-ssl/src/: main.rs
