[package]
name = "password-hashing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dotenvy_macro = "0.15.7"
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", features = ["hmac"] }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
scrypt = "0.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
